2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use dynamically allocated char array to detect memory access
	violation.
	* src/DHTRoutingTableDeserializer.cc
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Set struct sockaddr_in.sin_len if HAVE_SOCKADDR_IN_SIN_LEN is
	defined.
	* src/PeerMessageUtil.cc
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed HAVE_SOCKADDR_SIN_LEN as HAVE_SOCKADDR_IN_SIN_LEN
	* configure.ac
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added a check to see struct sockaddr_in has sin_len member.
	* configure.ac
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed buffer overrun.
	* src/DHTRoutingTableDeserializer.cc
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added LL for long long int constant.
	* test/FtpConnectionTest.cc
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Casted to unsigned int to suppress compiler warning on netbsd.
	* src/BtRuntime.h
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Assign the value of tv.tv_sec to time_t timesec instead of giving
	tv.tv_sec to localtime_r directly because tv.tv_sec may not be of
	type time_t.
	* src/SimpleLogger.cc
	
2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added test for FtpConnection::receiveSizeResponse().
	* test/FtpConnectionTest.cc
	
2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fix epoll error on the old kernel 2.6.8 or ealier.
	* src/EpollEventPoll.cc
	
2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use Util::parseLLInt instead of sscanf for portability. The
	conversion "%Lu" fails in Mac OSX which requires "%llu" instead.	
	* src/FtpConnection.cc

2009-02-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that adding 0 length filter to BitfieldMan filters 1